<resources>
    <string name="app_name">Risk</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="nav_game">Play</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_placeholder">Placeholder</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_settings_account">Account</string>
    <string name="nav_settings_game">Game</string>

    <string name="action_settings">Settings</string>
</resources>
